--- a/secondarypages/people.html
+++ b/secondarypages/people.html
@@ -24,6 +24,7 @@
 
     <img src="../images/people/macaco.png" alt="Macaco Quinho">
     <img src="../images/people/bruxa.png" alt="Bruxa">
+    <img src="../images/people/Gotica.png" alt="Gótica">
 
 
 </body>
