--- a/secondarypages/objects.html
+++ b/secondarypages/objects.html
@@ -10,7 +10,7 @@
     
     <h1>Galeria De Pixel Arts</h1>
 <hr>
-    <h2>Nessa página você verá algumas pixel arts separadas e criadas por min,<br> como intuito de serem guardadas e usadas como recordação.</h1>
+    <h2>Nessa página você verá algumas pixel arts separadas e criadas por mim,<br> como intuito de serem guardadas e usadas como recordação.</h1>
 
     <ul>
         <a href="../index.html">Página Principal</a><br>
