--- a/secondarypages/people.html
+++ b/secondarypages/people.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Pessoas</title>
 </head>
 <body>
-<hr>
     <h1>Galeria De Pixel Arts</h1>
-<hr>
     <h2>Nessa página você verá algumas pixel arts separadas e criadas por mim,<br> como intuito de serem guardadas e usadas como recordação.</h1>
-<hr>
-    <ul>
+    <ul style="text-align: left;">
         <a href="../index.html">Página Principal</a><br>
 
         <a href="people.html">Pessoas</a><br>
