--- a/secondarypages/objects.html
+++ b/secondarypages/objects.html
@@ -10,16 +10,13 @@
 <body>
     <h1>Galeria De Pixel Arts</h1>
     <h2>Nessa página você verá algumas pixel arts separadas e criadas por mim,<br> como intuito de serem guardadas e usadas como recordação.</h1>
-    <ul style="text-align: left;">
-        <a href="../index.html">Página Principal</a><br>
-
-        <a href="people.html">Pessoas</a><br>
-
-        <a href="objects.html">Objetos</a><br>
-
-        <a href="aboutme.html">Quem sou?</a><br>
-    </ul>
-<hr>
+    <nav>
+        <ul class="botoes">
+            <a id="bot1" href="../index.html">Página Principal</a><br>
+            <a id="bot2" href="people.html">Pessoas</a><br>
+            <a id="bot3" href="objects.html">Objetos</a><br>
+        </ul>
+    </nav>
     <img src="../images/objects/caixa.PNG" alt="caixa">
     <img src="../images/objects/bau.png" alt="bau">
     <img src="../images/objects/banco.png" alt="banco"><br>
