--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
 <body>
     <h1>Galeria De Pixel Arts</h1>
     <h2>Nessa página você verá algumas pixel arts separadas e criadas por mim,<br> como intuito de serem guardadas e usadas como recordação.</h1>
-    <ul style="text-align: left;">
-        <a href="index.html">Página Principal</a><br>
-
-        <a href="secondarypages/people.html">Pessoas</a><br>
-
-        <a href="secondarypages/objects.html">Objetos</a><br>
-
-        <a href="secondarypages/aboutme.html">Quem sou?</a><br>
-    </ul>
-<hr>
+    <nav>
+        <ul class="botoes">
+            <a id="bot1" href="index.html">Página Principal</a><br>
+            <a id="bot2" href="secondarypages/people.html">Pessoas</a><br>
+            <a id="bot3" href="secondarypages/objects.html">Objetos</a><br>
+        </ul>
+    </nav>
 
 </body>
 </html>
