--- a/index.html
+++ b/index.html
@@ -5,24 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <title>Artes</title>
+    <link rel="shortcut icon" href="images/bruxa-Sheet.png" type="image/x-icon">
+    <title>Galeria</title>
 </head>
 <body>
-    <h1>Galeria De Pixel Arts</h1>
-    <h2>Nessa página você verá algumas pixel arts separadas e criadas por mim,<br> como intuito de serem guardadas e usadas como recordação.</h1>
-    <ul style="text-align: left;">
-        <a href="index.html">Página Principal</a><br>
+    
+    <div class="blocogrande">
+        <header>
 
-        <a href="secondarypages/people.html">Pessoas</a><br>
+            <img src="images/bruxa-Sheet.png" alt="logo">
 
-        <a href="secondarypages/objects.html">Objetos</a><br>
+            <nav class="topo">
+                <a href="#">Home</a>
+                <a href="#">Pessoas</a>
+                <a href="#">Objetos</a>
+                <a href="#">Sobre Mim</a>
+            </nav>
+        </header>
 
-        <a href="secondarypages/aboutme.html">Quem sou?</a><br>
-    </ul>
-<hr>
+        <main>
+            <div class="menu">
+                <h1>Bem Vindo<br> a Galeria de Pixel Arts!</h1>
+                <h2>Use o menu no topo da pagina para navegar pelas imagens.</h2>
+            </div>
 
+            <div class="menuimagem">
+                <img src="images/rominho.png" alt="macaco">
+            </div>
+        </main>
+
+        <footer>
+            <p>
+                Criado por: Wesley Almeida Silva
+            </p>
+        </footer>
+
+    </div>
 </body>
 </html>
